--- a/package.json
+++ b/package.json
@@ -1,13 +1,5 @@
-{
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "rootDir": "src",
-    "outDir": "dist",
-    "esModuleInterop": true,
-    "strict": false,
-    "skipLibCheck": true
-  },
-  "include": ["src/**/*"],
-  "exclude": ["test", "node_modules", "dist"]
+"scripts": {
+  "dev": "tsx watch src/index.ts",
+  "build": "tsc -p tsconfig.json",
+  "start": "node dist/index.js"
 }
