--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "ES2022",
-    "moduleResolution": "Bundler",
-    "outDir": "dist",
+    "target": "ES2020",
+    "module": "commonjs",
     "rootDir": "src",
-    "strict": true,
+    "outDir": "dist",
     "esModuleInterop": true,
+    "strict": false,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["test", "node_modules", "dist"]
 }
