--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "heavy-equipment-backend",
   "version": "1.0.0",
   "private": true,
-  
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "postinstall": "npm rebuild better-sqlite3 --build-from-source"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "better-sqlite3": "^11.6.0",
+    "better-sqlite3": "11.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
