--- a/package.json
+++ b/package.json
@@ -1,36 +1,25 @@
 {
   "name": "heavy-equipment-backend",
   "version": "1.0.0",
-  "private": true,
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
-    "postinstall": "npm rebuild better-sqlite3 --build-from-source"
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "better-sqlite3": "11.6.0",
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/morgan": "^1.9.9",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^22.10.2",
-    "jest": "^29.7.0",
-    "supertest": "^7.0.0",
-    "tsx": "^4.21.0",
-    "typescript": "^5.7.2"
+    "mongoose": "^8.1.1",
+    "socket.io": "^4.7.5",
+    "stripe": "^14.21.0",
+    "twilio": "^4.23.0"
   }
 }
